Fix footer icon spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,10 +407,11 @@ footer ul {
   list-style: none;
   text-align: center;
   display: flex;
-  padding: 20px;
+  padding: 0;
   width: 100%;
   justify-content: center;
   background-color: #45677b;
+  flex-wrap: wrap;
   align-content: center;
 
 }
